--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,21 @@
-flask==1.1.2
-vk_api==11.8.0
+aiohttp==3.6.2
+async-timeout==3.0.1
+attrs==20.2.0
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
+gunicorn==20.0.4
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+multidict==4.7.6
+pika==1.1.0
+python3-anticaptcha==1.6.2
 requests==2.23.0
-python3_anticaptcha
+six==1.15.0
+urllib3==1.25.11
+vk-api==11.8.0
+Werkzeug==1.0.1
+yarl==1.6.2
